# hashrand

./: .env-prod  .env.example  .gitignore  .npm-dev.pid  .test-ed25519-private-key  ANALYSIS_old_x25519_pub_key_hex.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  GENERATED_KEYS_TEMP.txt  LICENSE  README.md  SECURITY.md  SECURITY_PLAN_TOKEN_COOKIE_SEPARATION.md  SHARED_SECRET_REFACTOR_TODO.md  SHARED_SECRET_TODO.md  access_token.txt  cookies_debug.txt  cookies_final_test.txt  cookies_fresh.txt  cookies_manual.txt  cookies_new.txt  cookies_test.txt  cookies_ultimate.txt  debug_ed25519_compatibility.rs  debug_keys.html  debug_serialization.js  debug_serialization.rs  debug_url.sh  final_test.sh  fresh_access_token.txt  generate_hash.js  index.html  justfile  last_access_token.txt  lit-localize.json  package-lock.json  package.json  runtime-config.toml  simple_test.sh  (+11 more)
api/: Cargo.toml  migrate_tracing.sh
api/locales/: ar.yml  ca.yml  de.yml  en.yml  es.yml  eu.yml  fr.yml  gl.yml  hi.yml  ja.yml  pt.yml  ru.yml  zh.yml
api/src/: lib.rs
api/src/database/: connection.rs  mod.rs  models.rs  operations.rs
api/src/database/operations/: magic_link_crypto.rs  magic_link_ops.rs  magic_link_storage.rs  magic_link_types.rs  magic_link_validation.rs  mod.rs  shared_secret_crypto.rs  shared_secret_ops.rs  shared_secret_storage.rs  shared_secret_types.rs  user_keys_ops.rs  user_ops.rs  user_privkey_ops.rs
api/src/email_templates/: magic_link.rs  mod.rs  shared_secret.rs
api/src/email_templates_backup/: email_styles.css
api/src/handlers/: api_key.rs  custom.rs  from_seed.rs  generate.rs  login.rs  mnemonic.rs  mod.rs  password.rs  payloads.rs  test.rs  user_keys.rs  users.rs  version.rs
api/src/handlers/login/: logout.rs  magic_link.rs  mod.rs  routing.rs  utilities.rs
api/src/handlers/shared_secret/: creation.rs  deletion.rs  mod.rs  retrieval.rs  tracking.rs
api/src/types/: alphabet.rs  mnemonic_language.rs  mod.rs  responses.rs
api/src/utils/: argon2_test.rs  auth.rs  auth_validation_middleware.rs  ed25519.rs  email.rs  email_old.rs  endpoint_helpers.rs  handler_helpers.rs  jwt.rs  jwt_middleware.rs  jwt_middleware_auth.rs  jwt_middleware_cookies.rs  jwt_middleware_core.rs  jwt_middleware_errors.rs  jwt_middleware_renewal.rs  jwt_middleware_types.rs  mod.rs  protected_endpoint_middleware.rs  pseudonimizer.rs  query.rs  random_generator.rs  rate_limiter.rs  routing.rs  signed_request.rs  signed_response.rs  validation.rs
api/src/utils/auth/: magic_link_auth_response_builder.rs  magic_link_email_delivery.rs  magic_link_gen.rs  magic_link_jwt_generator.rs  magic_link_request_parser.rs  magic_link_request_validation.rs  magic_link_response_builder.rs  magic_link_signature_validator.rs  magic_link_token_gen.rs  magic_link_token_processor.rs  magic_link_val.rs  mod.rs  refresh_token.rs  types.rs
api/src/utils/crypto/: backend_keys.rs  ecdh_encryption.rs  ed25519_to_x25519.rs  mod.rs
api/src/utils/ed25519/: conversion.rs  mod.rs  types.rs  verification.rs
api/src/utils/email/: config.rs  dry_run.rs  magic_link.rs  mod.rs  shared_secret.rs
api/src/utils/email_templates/: eastern.rs  mod.rs  peninsula.rs  primary.rs  rtl_other.rs  western_european.rs
api/src/utils/jwt/: config.rs  crypto.rs  custom_token_api.rs  custom_token_compat.rs  custom_token_crypto.rs  custom_token_encryption.rs  custom_token_serialization.rs  custom_token_types.rs  custom_tokens.rs  magic_links.rs  mod.rs  tokens.rs  types.rs  utils.rs
api/src/utils/jwt_middleware_auth/: bearer_validator.rs  cookie_refresh.rs  helpers.rs  mod.rs
api/src/utils/jwt_middleware_renewal/: mod.rs  non_signed_handler.rs  response_utilities.rs  (+3 more)
(+580 files in other folders)
