[package]
name = "hashrand"
version = "0.2.8"
edition = "2024"
license = "MIT"
authors = ["Arkaitz Dev <me@arkaitz.dev>"]
description = "A versatile CLI tool for generating cryptographically secure random strings with HTTP API support"
repository = "https://github.com/arkaitz-dev/hashrand"
keywords = ["random", "hash", "cli", "api", "generator"]
categories = ["command-line-utilities", "cryptography", "web-programming::http-server"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
nanoid = "0.4"
walkdir = "2.5"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "limit", "fs"] }
include_dir = "0.7"
mime_guess = "2.0"

[dev-dependencies]
tempfile = "3.13.0"
