[package]
name = "hashrand-spin"
authors = ["Arkaitz Dev <me@arkaitz.dev>"]
description = "A random hash generator API built with Fermyon Spin"
version = "1.4.1"
rust-version = "1.89"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
base64 = "0.22.1"
bip39 = { version = "2.2.0", features = ["spanish", "french", "portuguese", "chinese-simplified", "chinese-traditional", "japanese", "italian", "korean", "czech"] }
bs58 = "0.5.1"
chrono = { version = "0.4.34", features = ["serde"] }
hex = "0.4.3"
hmac = "0.12.1"
jsonwebtoken = "9.3.0"
nanoid = "0.4.0"
pbkdf2 = "0.12.2"
rand = "0.9.2"
rand_chacha = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sha3 = "0.10.8"
spin-sdk = "3.1.0"
urlencoding = "2.1.3"
uuid = { version = "1.10.0", features = ["v4"] }
