[package]
name = "hashrand-spin"
authors = ["Arkaitz Dev <me@arkaitz.dev>"]
description = "A random hash generator API built with Fermyon Spin"
version = "1.6.8"
rust-version = "1.89"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
argon2 = "0.5.3"
base64 = "0.22.1"
bip39 = { version = "2.2.0", features = ["spanish", "french", "portuguese", "chinese-simplified", "chinese-traditional", "japanese", "italian", "korean", "czech"] }
blake2 = "0.10"
bs58 = "0.5.1"
chacha20 = "0.9.1"
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4.34", features = ["serde"] }
hex = "0.4.3"
jsonwebtoken = "9.3.0"
maud = "0.27.0"
nanoid = "0.4.0"
password-hash = "0.5.0"
rand = "0.9.2"
rand_chacha = "0.9.0"
rust-i18n = "3.1.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
spin-sdk = "3.1.0"
urlencoding = "2.1.3"
